--- a/views/index.html
+++ b/views/index.html
@@ -40,7 +40,7 @@
         cookieText.innerText = "This website uses cookies to ensure you get the best experience on our website.";
 
         const cookieButton = document.createElement('button');
-        cookieButton.innerText = "Got it!";
+        cookieButton.innerText = "Got it";
         cookieButton.onclick = function () {
             Cookies.set('cookie', 'value');
             cookieBanner.remove();
